--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,11 @@ include_directories(
 )
 set(src_dir
         ${PROJECT_SOURCE_DIR}/src/main.cpp
+        ${PROJECT_SOURCE_DIR}/src/blocklist.cpp
         )
 add_executable(code ${src_dir})
 
 # 添加链接库
-target_link_libraries(code ${PROJECT_SOURCE_DIR}/bin/libUll.a)
+# target_link_libraries(code ${PROJECT_SOURCE_DIR}/bin/libUll.a)
 
 # 后缀名为 .a 和 .so 的文件分别为静态链接库和动态链接库
