--- a/.github/workflows/Judging.yml
+++ b/.github/workflows/Judging.yml
@@ -32,6 +32,8 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
+          cmake .
+          make
           ./clean.sh
           ./asset/localJudge.py
           .
