--- a/.github/workflows/Judging.yml
+++ b/.github/workflows/Judging.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: OnlineJudge
 
 # Controls when the workflow will run
 on:
